# face-system

./: CMakeLists.txt
include/: face_detector.h  face_system.h
models/: mobilefacenet.param  mobilefacenet.param.1  scrfd_500m.param
src/: face_detector.cpp  face_system.cpp  main.cpp
